openshift/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-app2
  template:
    metadata:
      labels:
        app: backend-app2
    spec:
      containers:
        - name: backend-app2
          image: fathyafi/be-app2:latest
          ports:
            - containerPort: 8080
