openshift/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-app2
spec:
  selector:
    app: backend-app2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
