openshift/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend-app
spec:
  to:
    kind: Service
    name: backend-app
  port:
    targetPort: 8080
